--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -13,6 +13,6 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 </head>
 
 <div th:fragment="scripts" xmlns:th="http://www.thymeleaf.org">
-    <script src="/js/main.js"></script>
+    <script src="/js/fab.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </div>
