Simplify admin fragments and add favicon.

--- a/src/main/resources/templates/report-detail.html
+++ b/src/main/resources/templates/report-detail.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/admin-common :: head-with-icons('Report Details')}"></head>
+<head th:replace="~{fragments/admin-common :: head('Report Details')}"></head>
 <body class="admin-body">
 
 <div th:replace="~{fragments/admin-common :: admin-nav}"></div>
