Added simple about page.

--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -30,6 +30,12 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
                     <span>Track</span>
                 </a>
             </li>
+            <li>
+                <a href="/about">
+                    <i class="bi bi-info-circle-fill"></i>
+                    <span>About</span>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
