--- a/src/main/resources/templates/admin-login.html
+++ b/src/main/resources/templates/admin-login.html
@@ -26,6 +26,9 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
                     <button type="submit" class="btn btn-primary btn-lg">Login</button>
                 </div>
             </form>
+            <div class="d-grid mt-3">
+                <a href="/" class="btn btn-secondary btn-lg"><i class="bi bi-arrow-left"></i> Back to Home</a>
+            </div>
         </div>
     </div>
     <div th:replace="~{fragments/admin-common :: scripts}"></div>
