--- a/src/main/resources/templates/admin-login.html
+++ b/src/main/resources/templates/admin-login.html
@@ -27,7 +27,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
                 </div>
             </form>
             <div class="d-grid mt-3">
-                <a href="/" class="btn btn-secondary btn-lg"><i class="bi bi-arrow-left"></i> Back to Home</a>
+                <a href="/" class="btn btn-outline-secondary btn-lg"><i class="bi bi-arrow-left"></i> Back to Home</a>
             </div>
         </div>
     </div>
