Add client-side validation for upload limit.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -65,6 +65,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
                             <div class="mb-3">
                                 <label for="files" class="form-label">Select files to upload:</label>
                                 <input class="form-control" type="file" id="files" name="files" multiple>
+                                <div id="file-error" class="text-danger mt-2"></div>
                                 <div class="form-text mt-2">Your evidence will be kept strictly confidential.</div>
                             </div>
                         </div>
